use spring caching, use less static methods