@@ -5,41 +5,64 @@
  */
 package org.geonetwork.gn4proxypredicates;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
+import static org.mockito.Mockito.clearInvocations;
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.util.Arrays;
 import java.util.List;
 import org.geonetwork.domain.Source;
 import org.geonetwork.domain.repository.SourceRepository;
+import org.geonetwork.utility.ApplicationContextProvider;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.springframework.beans.BeansException;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.support.DefaultListableBeanFactory;
+import org.springframework.cache.CacheManager;
+import org.springframework.cache.annotation.EnableCaching;
+import org.springframework.cache.concurrent.ConcurrentMapCacheManager;
 import org.springframework.context.ApplicationContext;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.context.support.GenericApplicationContext;
+import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.web.servlet.function.ServerRequest;
 
 /** Simple tests for GnPortalPredicate. */
+@ContextConfiguration
+@ExtendWith(SpringExtension.class)
 public class GnPortalPredicateTest {
+
+    @Autowired
+    ApplicationContext applicationContext;
 
     /** this tests a Path that isn't to "/" */
     @Test
     public void testNotGN() {
-        setupGnPortalPredicate(Arrays.asList());
+        setupGnPortalPredicate(List.of());
 
         var predicate = GeoNetwork4Predicate.isGeoNetwork4Request();
 
-        assertEquals(false, predicate.test(createRequest("/abc")));
-        assertEquals(false, predicate.test(createRequest("/abc/")));
+        assertFalse(predicate.test(createRequest("/abc")));
+        assertFalse(predicate.test(createRequest("/abc/")));
     }
 
     /** tests the "main" portal (`srv`). */
     @Test
     public void testSrv() {
-        setupGnPortalPredicate(Arrays.asList());
+        setupGnPortalPredicate(List.of());
 
         var predicate = GeoNetwork4Predicate.isGeoNetwork4Request();
 
-        assertEquals(true, predicate.test(createRequest("/srv")));
-        assertEquals(true, predicate.test(createRequest("/srv/")));
+        assertTrue(predicate.test(createRequest("/srv")));
+        assertTrue(predicate.test(createRequest("/srv/")));
     }
 
     /** Tests a good source (portal uuid) - one that exists. */
@@ -49,8 +72,8 @@ public class GnPortalPredicateTest {
 
         var predicate = GeoNetwork4Predicate.isGeoNetwork4Request();
 
-        assertEquals(true, predicate.test(createRequest("/def")));
-        assertEquals(true, predicate.test(createRequest("/def/")));
+        assertTrue(predicate.test(createRequest("/def")));
+        assertTrue(predicate.test(createRequest("/def/")));
     }
 
     /** Tests a bad source (portal uuid) - one that does NOT exists. */
@@ -60,9 +83,37 @@ public class GnPortalPredicateTest {
 
         var predicate = GeoNetwork4Predicate.isGeoNetwork4Request();
 
-        assertEquals(false, predicate.test(createRequest("/zzz")));
-        assertEquals(false, predicate.test(createRequest("/zzz/")));
+        assertFalse(predicate.test(createRequest("/zzz")));
+        assertFalse(predicate.test(createRequest("/zzz/")));
     }
+
+    /** tests caching is working */
+    @Test
+    public void testCaching() {
+        var sourcerepo = setupGnPortalPredicate(List.of("abc"));
+        var predicate = GeoNetwork4Predicate.isGeoNetwork4Request();
+
+        // start counting now
+        clearInvocations(sourcerepo);
+
+        // make 2 requests, clear cache between each request.  Should be 2 calls to the SourceRepo
+        predicate.test(createRequest("/zzz"));
+        ((CachingPortalIds) applicationContext.getBean("cachingPortalIds")).clear();
+        predicate.test(createRequest("/zzz"));
+
+        verify(sourcerepo, times(2)).findAll();
+
+        // make 2 requests.  Should be 1 call to the SourceRepo (other is cached)
+        clearInvocations(sourcerepo);
+        ((CachingPortalIds) applicationContext.getBean("cachingPortalIds")).clear();
+
+        predicate.test(createRequest("/zzz"));
+        predicate.test(createRequest("/zzz"));
+
+        verify(sourcerepo, times(1)).findAll();
+    }
+
+    // -----------------------------------------------------------------------
 
     public ServerRequest createRequest(String path) {
         ServerRequest request = mock(ServerRequest.class);
@@ -73,36 +124,68 @@ public class GnPortalPredicateTest {
     /**
      * This setups up a STATIC class (GnPortalPredicate). Watch for side effects!!!
      *
-     * <p>TODO: make the class non-static.
-     *
      * @param allSourceUUID list of the uuids to put in the mocked source reposition
+     * @return the underlying SourceRepository used
      */
-    public void setupGnPortalPredicate(List<String> allSourceUUID) {
+    public SourceRepository setupGnPortalPredicate(List<String> allSourceUUID) {
         GeoNetwork4Predicate geoNetwork4Predicate = new GeoNetwork4Predicate();
         geoNetwork4Predicate.setListOfPath(List.of("/srv"));
-        geoNetwork4Predicate.cachingPortalIds.clear();
 
-        var mockSourceRepository = mock(SourceRepository.class);
-        when(mockSourceRepository.findAll())
-                .thenReturn(allSourceUUID.stream()
-                        .map(x -> {
-                            var result = new Source();
-                            result.setUuid(x);
-                            return result;
-                        })
-                        .toList());
+        // create the `Source` objects to return (with the correct UUID)
+        var sourceRepoResults = allSourceUUID.stream()
+                .map(x -> {
+                    var result = new Source();
+                    result.setUuid(x);
+                    return result;
+                })
+                .toList();
 
-        CachingPortalIds.applicationContext = mock(ApplicationContext.class);
-        when(CachingPortalIds.applicationContext.getBean(SourceRepository.class))
-                .thenReturn(mockSourceRepository);
-        //    FIXME: This is not working. It's not mocking the ApplicationContextProvider correctly.
-        //    try (MockedStatic<ApplicationContextProvider> applicationContextProviderMockedStatic =
-        //        Mockito.mockStatic(ApplicationContextProvider.class)) {
-        //      ApplicationContext applicationContext = mock(ApplicationContext.class);
-        //      applicationContextProviderMockedStatic
-        //          .when(ApplicationContextProvider::getApplicationContext)
-        //          .thenReturn(applicationContext);
-        //      when(applicationContext.getBean(SourceRepository.class)).thenReturn(mockSourceRepository);
-        //    }
+        // manually setup the application context
+        var beanFactory = ((GenericApplicationContext) applicationContext).getBeanFactory();
+
+        SourceRepository mockSourceRepository;
+
+        // update sourceRepository so it returns the correct results.
+        // 1. already registered?  -> just update its return value
+        // 2. not registered? --> create, update return value, put in application context
+        try {
+            mockSourceRepository = (SourceRepository) applicationContext.getBean("sourceRepository");
+            doReturn(sourceRepoResults).when(mockSourceRepository).findAll();
+        } catch (Exception e) {
+            mockSourceRepository = mock(SourceRepository.class);
+            doReturn(sourceRepoResults).when(mockSourceRepository).findAll();
+            beanFactory.registerSingleton("sourceRepository", mockSourceRepository);
+        }
+
+        // remove bean if it exists
+        try {
+            applicationContext.getBean("cachingPortalIds");
+            ((DefaultListableBeanFactory) beanFactory).destroySingleton("cachingPortalIds");
+        } catch (BeansException e) {
+            // no action
+        }
+
+        // create CachingPortalIds class, make sure cache is cleared.
+        var cachingPortalIds = beanFactory.createBean(CachingPortalIds.class);
+        cachingPortalIds.clear(); // make sure the cache is cleared
+        beanFactory.registerSingleton("cachingPortalIds", cachingPortalIds);
+
+        var acp = new ApplicationContextProvider();
+        acp.setApplicationContext(applicationContext);
+
+        return mockSourceRepository;
+    }
+
+    // ---------------------------------------------------------------------------
+
+    // setup the context - make sure caching is enabled.
+    @EnableCaching
+    @Configuration
+    public static class CachingTestConfig {
+
+        @Bean
+        public CacheManager cacheManager() {
+            return new ConcurrentMapCacheManager("source-portal-ids");
+        }
     }
 }
